@@ -1,23 +1,25 @@
 package org.example.containerservice.restControllers;
 
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.Positive;
+import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
+import org.example.containerservice.mappers.ContainerMapper;
+import org.example.containerservice.models.dto.container.ClientContainerDTO;
+import org.example.containerservice.models.dto.container.CollectFromClientRequest;
+import org.example.containerservice.models.dto.container.TransferToClientRequest;
 import org.example.containerservice.services.ClientContainerService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
-import org.example.containerservice.mappers.ContainerMapper;
-import org.example.containerservice.models.dto.container.TransferToClientRequest;
-import org.example.containerservice.models.dto.container.CollectFromClientRequest;
-import org.example.containerservice.models.dto.container.ClientContainerDTO;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Slf4j
 @RestController
 @RequestMapping("/api/v1/containers/client")
 @RequiredArgsConstructor
+@Validated
 public class ClientContainerController {
 
     private final ClientContainerService clientContainerService;
@@ -25,8 +27,7 @@ public class ClientContainerController {
 
     @PreAuthorize("hasAuthority('container:transfer')")
     @PostMapping("/transfer")
-    public ResponseEntity<Void> transferContainerToClient(@RequestBody TransferToClientRequest request) {
-        log.info("Received transfer request: {}", request);
+    public ResponseEntity<Void> transferContainerToClient(@RequestBody @Valid @NonNull TransferToClientRequest request) {
         clientContainerService.transferContainerToClient(
                 request.getClientId(), request.getContainerId(), request.getQuantity());
         return ResponseEntity.noContent().build();
@@ -34,8 +35,7 @@ public class ClientContainerController {
 
     @PreAuthorize("hasAuthority('container:transfer')")
     @PostMapping("/collect")
-    public ResponseEntity<Void> collectContainerFromClient(@RequestBody CollectFromClientRequest request) {
-        log.info("Received collect request: {}", request);
+    public ResponseEntity<Void> collectContainerFromClient(@RequestBody @Valid @NonNull CollectFromClientRequest request) {
         clientContainerService.collectContainerFromClient(
                 request.getClientId(), request.getContainerId(), request.getQuantity());
         return ResponseEntity.noContent().build();
@@ -43,12 +43,11 @@ public class ClientContainerController {
 
     @PreAuthorize("hasAuthority('container:view')")
     @GetMapping("/{clientId}")
-    public ResponseEntity<List<ClientContainerDTO>> getClientContainers(@PathVariable Long clientId) {
-        log.info("Fetching containers for client: {}", clientId);
+    public ResponseEntity<List<ClientContainerDTO>> getClientContainers(@PathVariable @Positive Long clientId) {
         List<ClientContainerDTO> containers = clientContainerService.getClientContainers(clientId)
                 .stream()
                 .map(containerMapper::toClientContainerDTO)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(containers);
     }
 }
