@@ -1,5 +1,6 @@
 package org.example.purchaseservice.mappers;
 
+import lombok.NonNull;
 import org.example.purchaseservice.models.Product;
 import org.example.purchaseservice.models.ProductUsage;
 import org.example.purchaseservice.models.dto.product.ProductCreateDTO;
@@ -8,15 +9,11 @@ import org.example.purchaseservice.models.dto.product.ProductUpdateDTO;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class ProductMapper {
 
-    public ProductDTO toDto(Product product) {
-        if (product == null) {
-            return null;
-        }
+    public ProductDTO toDto(@NonNull Product product) {
         ProductDTO dto = new ProductDTO();
         dto.setId(product.getId());
         dto.setName(product.getName());
@@ -24,23 +21,20 @@ public class ProductMapper {
         return dto;
     }
 
-    public List<ProductDTO> toDtoList(List<Product> products) {
-        if (products == null) {
-            return null;
-        }
+    public List<ProductDTO> toDtoList(@NonNull List<Product> products) {
         return products.stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public Product productCreateDTOToProduct(ProductCreateDTO dto) {
+    public Product productCreateDTOToProduct(@NonNull ProductCreateDTO dto) {
         Product product = new Product();
         product.setName(dto.getName());
         product.setUsage(ProductUsage.valueOf(dto.getUsage()));
         return product;
     }
 
-    public Product productUpdateDTOToProduct(ProductUpdateDTO dto) {
+    public Product productUpdateDTOToProduct(@NonNull ProductUpdateDTO dto) {
         Product product = new Product();
         product.setName(dto.getName());
         product.setUsage(dto.getUsage());
